# M31R

./: .gitignore  =12.0  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: dataset.yaml  eval.yaml  global.yaml  model.yaml  model_tiny.yaml  runtime.yaml  test_combined.yaml  tokenizer.yaml  train.yaml  train_overfit.yaml  train_tiny.yaml
data/datasets/: manifest.json
data/tokenizer/: metadata.json  tokenizer.json
data/tokenizer-overfit/: metadata.json  tokenizer.json
datasets/dev-overfit/: manifest.json  shard_0002.json
datasets/dev-small/: manifest.json  shard_0000.json  shard_0001.json  shard_0002.json  shard_0003.json
docs/: 01_VISION_PRD.md  02_REQUIREMENTS_SPEC.md  03_GLOSSARY_AND_DEFINITIONS.md  04_SYSTEM_ARCHITECTURE.md  05_DATA_ARCHITECTURE.md  06_MODEL_ARCHITECTURE.md  07_TRAINING_ARCHITECTURE.md  08_REASONING_COT_DESIGN.md  09_REPOSITORY_STRUCTURE.md  10_DEVELOPMENT_WORKFLOW.md  11_CONFIGURATION_SPEC.md  12_CLI_AND_TOOLING_SPEC.md  13_CODING_STANDARDS.md  14_EVALUATION_METHODOLOGY.md  15_TESTING_STRATEGY.md  16_BENCHMARK_SUITE.md  17_SERVING_ARCHITECTURE.md  18_RELEASE_PROCESS.md  19_SECURITY_AND_SAFETY.md  20_OBSERVABILITY_AND_LOGGING.md  21_PERFORMANCE_OPTIMIZATION.md  22_MAINTENANCE_AND_SUPPORT.md  23_RISK_MANAGEMENT.md  24_SCALABILITY_AND_FUTURE_ROADMAP.md  25_APPENDIX_AND_REFERENCE.md
experiments/20260212_032725_42/: config.json
experiments/20260212_224254_42/: config.json
exports/: metadata.json
m31r/: __init__.py  __main__.py
m31r/cli/: commands.py  dashboard_cmd.py  exit_codes.py  main.py
m31r/config/: exceptions.py  loader.py  schema.py
m31r/dashboard/: __init__.py  server.py
m31r/data/: __init__.py
m31r/evaluation/: __init__.py
m31r/logging/: logger.py
m31r/model/: __init__.py  attention.py  block.py  config.py  embedding.py  factory.py  interfaces.py  mlp.py  norm.py  registry.py  rope.py  transformer.py  utils.py
m31r/release/: __init__.py  reproducibility.py
m31r/runtime/: bootstrap.py  environment.py
m31r/serving/: __init__.py
m31r/tokenizer/: __init__.py
m31r/training/: __init__.py  objectives.py
m31r/utils/: filesystem.py  hashing.py  paths.py
scripts/: create_dummy_data.py  create_tiny_dataset.py  create_tokenizer.py  generate_synthetic_rust.py  manual_export.py  run_tiny_pipeline.sh  snigdhaos-rust-harvester.py
tests/: conftest.py
(+236 files in other folders)
